CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(dillproj)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
# SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
  IF(DEFINED WIN32_MSVC_MT)
    SET(CMAKE_C_FLAGS_DEBUG_INIT      "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_C_FLAGS_MINSIZEREL_INIT           "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELEASE_INIT              "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO_INIT   "/MT /Zi /O2 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_DEBUG_INIT    "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_CXX_FLAGS_MINSIZEREL_INIT         "/MT /O1 /Ob1 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELEASE_INIT            "/MT /O2 /Ob2 /D NDEBUG")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO_INIT "/MT /Zi /O2 /Ob1 /D NDEBUG")
  ENDIF(DEFINED WIN32_MSVC_MT)
ENDIF(MSVC)

SET(DILL_BIN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
SET(DILL_LIB_HEADER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libdill/inc)

IF(WIN32)
SET(DILL_BUILTIN_BOOST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0/stage/lib)
SET(DILL_BUILTIN_WXWIDGETS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12)
SET(DILL_BUILTIN_WXWIDGETS_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12/include)
SET(DILL_BUILTIN_WXWIDGETS_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12/lib/vc_lib)
ENDIF(WIN32)

IF(APPLE)
SET(DILL_BUILTIN_BOOST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0/stage/lib)
SET(DILL_BUILTIN_WXWIDGETS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4)
SET(DILL_BUILTIN_WXWIDGETS_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4/include)
SET(DILL_BUILTIN_WXWIDGETS_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4/lib)
SET(CMAKE_OSX_ARCHITECTURES i386)
ENDIF(APPLE)

ADD_SUBDIRECTORY("./libdill")
ADD_SUBDIRECTORY("./tools")
ADD_SUBDIRECTORY("./dlv")


