CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_USER_MAKE_RULES_OVERRIDE "CMakeRules.txt")

PROJECT(dillproj)

IF(NOT MSVC)
  # For make-based generator, select a default config at here
  IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Debug")
    # SET(CMAKE_BUILD_TYPE "Release")
  ENDIF(NOT CMAKE_BUILD_TYPE)
ENDIF(NOT MSVC)

SET(DILL_BIN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
SET(DILL_LIB_HEADER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libdill/inc)

IF(WIN32)
SET(DILL_BUILTIN_BOOST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0/stage/lib)
SET(DILL_BUILTIN_WXWIDGETS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12)
SET(DILL_BUILTIN_WXWIDGETS_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12/include)
SET(DILL_BUILTIN_WXWIDGETS_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxMSW-2.8.12/lib/vc_lib)
ENDIF(WIN32)

IF(APPLE)
SET(DILL_BUILTIN_BOOST_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0)
SET(DILL_BUILTIN_BOOST_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/boost_1_53_0/stage/lib)
SET(DILL_BUILTIN_WXWIDGETS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4)
SET(DILL_BUILTIN_WXWIDGETS_INC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4/include)
SET(DILL_BUILTIN_WXWIDGETS_LIB_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dep/wxWidgets-2.9.4/lib)
SET(CMAKE_OSX_ARCHITECTURES i386)
ENDIF(APPLE)

ADD_SUBDIRECTORY("./libdill")
ADD_SUBDIRECTORY("./tools")
ADD_SUBDIRECTORY("./dlv")


