CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(dlv)

# For cmake to find wxWidgets installed at custom path
IF(WIN32)
SET(wxWidgets_ROOT_DIR "../dep/wxMSW-2.8.12")
SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "../dep/wxMSW-2.8.12/include" "../dep/wxMSW-2.8.12/include/msvc")
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "../dep/wxMSW-2.8.12/lib/vc_lib")
ENDIF(WIN32)

FIND_PACKAGE(wxWidgets COMPONENTS core base REQUIRED)
INCLUDE( "${wxWidgets_USE_FILE}" )

INCLUDE_DIRECTORIES("../libdill/inc")

FILE(GLOB INTERNAL_HEADER_FILES *.h)
FILE(GLOB INTERNAL_SOURCE_FILES *.cpp)
SOURCE_GROUP("Header Files" FILES ${INTERNAL_HEADER_FILES})

ADD_EXECUTABLE(dlv WIN32
  ${INTERNAL_SOURCE_FILES}
  ${INTERNAL_HEADER_FILES}
)
SET_PROPERTY(TARGET dlv PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)
TARGET_LINK_LIBRARIES(dlv dill ${wxWidgets_LIBRARIES})

ADD_CUSTOM_COMMAND(TARGET dlv POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ../bin/${CMAKE_BUILD_TYPE}/resource
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resource ../bin/${CMAKE_BUILD_TYPE}/resource
    COMMENT "Copying dlv resources ...")