CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

## For cmake to find built-in wxWidgets
IF(WIN32)
SET(wxWidgets_ROOT_DIR ${DILL_BUILTIN_WXWIDGETS_DIRECTORY})
ELSE(WIN32)
SET(CMAKE_PREFIX_PATH ${DILL_BUILTIN_WXWIDGETS_DIRECTORY})
ENDIF(WIN32)

FIND_PACKAGE(wxWidgets COMPONENTS core base REQUIRED)
# This setup wxWidgets headers & libs dependencies.
INCLUDE( "${wxWidgets_USE_FILE}" )

INCLUDE_DIRECTORIES(${DILL_LIB_HEADER_DIRECTORY})

FILE(GLOB INTERNAL_HEADER_FILES *.h)
FILE(GLOB INTERNAL_SOURCE_FILES *.cpp)
SOURCE_GROUP("Header Files" FILES ${INTERNAL_HEADER_FILES})

IF(WIN32 OR CYGWIN)
ADD_EXECUTABLE(dlv WIN32
  ${INTERNAL_SOURCE_FILES}
  ${INTERNAL_HEADER_FILES}
)
ELSEIF(APPLE)
ADD_EXECUTABLE(dlv MACOSX_BUNDLE
  ${INTERNAL_SOURCE_FILES}
  ${INTERNAL_HEADER_FILES}
)
ELSE(WIN32 OR CYGWIN)
ADD_EXECUTABLE(dlv
  ${INTERNAL_SOURCE_FILES}
  ${INTERNAL_HEADER_FILES}
)
ENDIF(WIN32 OR CYGWIN)

SET_PROPERTY(TARGET dlv PROPERTY RUNTIME_OUTPUT_DIRECTORY ${DILL_BIN_OUTPUT_DIRECTORY})
TARGET_LINK_LIBRARIES(dlv dill ${wxWidgets_LIBRARIES})

IF(MSVC)
ADD_CUSTOM_COMMAND(TARGET dlv POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${DILL_BIN_OUTPUT_DIRECTORY}/$<CONFIGURATION>/resource
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resource ${DILL_BIN_OUTPUT_DIRECTORY}/$<CONFIGURATION>/resource
    COMMENT "Copying dlv resources ...")
ELSE(MSVC)
ADD_CUSTOM_COMMAND(TARGET dlv POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${DILL_BIN_OUTPUT_DIRECTORY}/resource
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resource ${DILL_BIN_OUTPUT_DIRECTORY}/resource
    COMMENT "Copying dlv resources ...")
ENDIF(MSVC)
