CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# For cmake to find Boost installed at custom path
IF(WIN32)
SET(Boost_ROOT_DIR "../dep/boost_1_53_0")
SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "../dep/boost_1_53_0")
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "../dep/boost_1_53_0/stage/lib")
ENDIF(WIN32)

FIND_PACKAGE(Boost COMPONENTS system thread date_time regex chrono REQUIRED)

FILE(GLOB EXPORTED_HEADER_FILES ./inc/*.h)
FILE(GLOB INTERNAL_HEADER_FILES ./src/*.h)
FILE(GLOB IMPL_SOURCE_FILES ./src/*.cpp)
SOURCE_GROUP("Header Files" FILES ${EXPORTED_HEADER_FILES})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES("./inc")

ADD_LIBRARY(dill SHARED
  ${INTERNAL_HEADER_FILES}
  ${IMPL_SOURCE_FILES}
  ${EXPORTED_HEADER_FILES}
)
SET_PROPERTY(TARGET dill PROPERTY ARCHIVE_OUTPUT_DIRECTORY ../bin)
SET_PROPERTY(TARGET dill PROPERTY RUNTIME_OUTPUT_DIRECTORY ../bin)
SET_PROPERTY(TARGET dill PROPERTY DEFINE_SYMBOL DILL_EXPORTS)
TARGET_LINK_LIBRARIES(dill ${Boost_LIBRARIES})

#ADD_LIBRARY(dill_static STATIC
#  ${INTERNAL_HEADER_FILES}
#  ${IMPL_SOURCE_FILES}
#  ${EXPORTED_HEADER_FILES}
#)
#SET_PROPERTY(TARGET dill_static PROPERTY ARCHIVE_OUTPUT_DIRECTORY ../bin)
#SET_PROPERTY(TARGET dill_static APPEND_STRING PROPERTY COMPILE_DEFINITIONS DILL_STATIC_LIBRARY)

