CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(WIN32 OR APPLE)
## For cmake to find built-in Boost
#  To locate headers
SET(BOOST_ROOT ${DILL_BUILTIN_BOOST_DIRECTORY})
#  To locate boost libraries
SET(BOOST_LIBRARYDIR ${DILL_BUILTIN_BOOST_LIB_DIRECTORY})
#  To specify which variant of boost libraries should we use
SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
ENDIF(WIN32 OR APPLE)

FIND_PACKAGE(Boost COMPONENTS system thread date_time regex chrono REQUIRED)

FILE(GLOB EXPORTED_HEADER_FILES inc/*.h)
FILE(GLOB INTERNAL_HEADER_FILES src/*.h)
FILE(GLOB IMPL_SOURCE_FILES src/*.cpp)
SOURCE_GROUP("Header Files" FILES ${EXPORTED_HEADER_FILES})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${DILL_LIB_HEADER_DIRECTORY})

IF(WIN32)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE -DDILL_EXPORTS -D_WIN32_WINNT=0x0501)
ENDIF(WIN32)

ADD_LIBRARY(dill SHARED
  ${INTERNAL_HEADER_FILES}
  ${IMPL_SOURCE_FILES}
  ${EXPORTED_HEADER_FILES}
)
SET_PROPERTY(TARGET dill PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${DILL_BIN_OUTPUT_DIRECTORY})
SET_PROPERTY(TARGET dill PROPERTY RUNTIME_OUTPUT_DIRECTORY ${DILL_BIN_OUTPUT_DIRECTORY})
TARGET_LINK_LIBRARIES(dill ${Boost_LIBRARIES})

#ADD_LIBRARY(dill_static STATIC
#  ${INTERNAL_HEADER_FILES}
#  ${IMPL_SOURCE_FILES}
#  ${EXPORTED_HEADER_FILES}
#)
#SET_PROPERTY(TARGET dill_static PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${DILL_BIN_OUTPUT_DIRECTORY})
#SET_PROPERTY(TARGET dill_static APPEND_STRING PROPERTY COMPILE_DEFINITIONS DILL_STATIC_LIBRARY)

